<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_color"
        android:title="@string/color"
        android:icon="@drawable/ic_color_palette"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_clear"
        android:title="@string/clear"
        android:icon="@drawable/ic_action_discard"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_draw"
        android:title="@string/draw"
        android:icon="@drawable/ic_draw"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_erase"
        android:title="@string/erase"
        android:icon="@drawable/ic_eraser"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom"/>

</menu>