<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_above="@+id/navigationBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="4"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/home_card_learn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/unit8"
            android:layout_weight="1"
            android:clickable="true"
            android:elevation="@dimen/unit100"
            card_view:cardCornerRadius="@dimen/unit8">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/learn_color"
                android:orientation="vertical"
                android:padding="@dimen/unit10">

                <TextView
                    style="@style/HomeCardTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:text="@string/home_card_learn_title" />

                <TextView
                    style="@style/HomeCardDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="@dimen/unit5"
                    android:layout_marginBottom="@dimen/unit5"
                    android:ellipsize="end"
                    android:maxLines="5"
                    android:text="@string/home_card_learn_text" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/home_card_practice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/unit8"
            android:layout_weight="1"
            android:clickable="true"
            android:elevation="@dimen/unit100"
            card_view:cardCornerRadius="@dimen/unit8">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/story_build_color"
                android:orientation="vertical"
                android:padding="@dimen/unit10">

                <TextView
                    style="@style/HomeCardTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:text="@string/home_card_practice_title" />

                <TextView
                    style="@style/HomeCardDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="@dimen/unit5"
                    android:layout_marginBottom="@dimen/unit5"
                    android:ellipsize="end"
                    android:maxLines="5"
                    android:text="@string/home_card_practice_text" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/home_card_assess"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/unit8"
            android:layout_weight="1"
            android:clickable="true"
            android:elevation="@dimen/unit100"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="@dimen/unit8">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/exercise_color"
                android:orientation="vertical"
                android:padding="@dimen/unit10">

                <TextView
                    style="@style/HomeCardTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:text="@string/home_card_assess_title" />

                <TextView
                    style="@style/HomeCardDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="@dimen/unit5"
                    android:layout_marginBottom="@dimen/unit5"
                    android:ellipsize="end"
                    android:maxLines="5"
                    android:text="@string/home_card_assess_text" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/home_card_share"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/unit8"
            android:layout_weight="1"
            android:clickable="true"
            android:elevation="@dimen/unit100"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="@dimen/unit8">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/share_color"
                android:orientation="vertical"
                android:padding="@dimen/unit10">

                <TextView
                    style="@style/HomeCardTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:text="@string/home_card_share_title" />

                <TextView
                    style="@style/HomeCardDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="@dimen/unit5"
                    android:layout_marginBottom="@dimen/unit5"
                    android:ellipsize="end"
                    android:maxLines="5"
                    android:text="@string/home_card_share_text" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</RelativeLayout>
